# planobal

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  claude.md  pyproject.toml
.claude/agents/: dxf-parser.md  geometry-builder.md  godot-integrator.md
engine/: main.gd  main.gd.uid  main.tscn  menu.gd  menu.gd.uid  menu.tscn  paint_menu.gd  paint_menu.gd.uid  paint_menu.tscn  painter.gd  painter.gd.uid  player.gd  player.gd.uid  player.tscn  project.godot  sample_room.gltf  sample_room.gltf.import
engine/assets/materials/: CREDITS.md
engine/assets/materials/cemento/: albedo.jpg.import  normal.jpg.import  roughness.jpg.import
engine/assets/materials/madera/: albedo.jpg.import  normal.jpg.import  roughness.jpg.import
engine/assets/materials/pintura/: albedo.jpg.import  normal.jpg.import  roughness.jpg.import
pipeline/: __main__.py
pipeline/compose/: loader.py  slab.py
pipeline/geometry/: build.py  coords.py  floor.py  walls.py
pipeline/schema/: __init__.py  building.py  geometry.py  paint_state.py
pipeline/schema/examples/: building.example.json  geometry.example.json  paint_state.example.json
pipeline/tests/: test_build.py  test_schema.py  test_walls_openings.py
tools/: inspect_dxf.py
