[project]
name = "plano3d-pipeline"
version = "0.0.1"
description = "Pipeline CAD (DXF/DWG) -> geometry.json -> .gltf para Plano3D."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "ezdxf>=1.1",      # lectura DXF y conversión DWG (addon odafc)
    "trimesh>=4.0",    # generación/exportación de malla .gltf (Fase 1/3)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["pipeline/tests"]

[tool.setuptools.packages.find]
include = ["pipeline*"]
